[workspace]
resolver = "2"
members = [
  "rs_lib",
]

[workspace.dependencies]
anyhow = "1.0.57"
deno_config = "0.84.0"
deno_path_util = "=0.6.4"
js-sys = "=0.3.77"
serde = "1.0.149"
serde-wasm-bindgen = "=0.6.5"
sys_traits = "0.1.17"
url = "2.5"
wasm-bindgen = "=0.2.100"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
